# picoMusicPlayer

./: CMakeLists.txt  README.md  main.c
i2s/: CMakeLists.txt  i2s.pio
i2s32/: CMakeLists.txt  i2s32.pio
include/: config.h  i2s_config.h  play.h  wav.h
src/: CMakeLists.txt  config.h  hw_config.c  i2s_config.h  main.c  play.c  play.h  wav.c
src/i2s/: CMakeLists.txt  i2s.c  i2s.h  i2s32s.pio
src/i2s/32Stereo/: CMakeLists.txt  i2s32.pio
test/: CMakeLists.txt
test/fatfs/: CMakeLists.txt  hw_config.c  main.c
test/i2s/: CMakeLists.txt  i2s_config.h  sine.c
test/i2s/16Monoral/: CMakeLists.txt  sine.c
test/i2s/32Stereo/: CMakeLists.txt
